@@ -189,9 +189,6 @@ public class JabRefCLI {
         options.addOption("v", "version", false, Localization.lang("Display version"));
         options.addOption(null, "debug", false, Localization.lang("Show debug level messages"));
 
-        // The "-console" option is handled by the install4j launcher
-        options.addOption(null, "console", false, Localization.lang("Show console output (only when the launcher is used)"));
-
         options.addOption(Option
                 .builder("i")
                 .longOpt("import")
@@ -325,7 +322,7 @@ public class JabRefCLI {
                 .map(format -> new Pair<>(format.getName(), format.getId()))
                 .toList();
         String importFormatsIntro = Localization.lang("Available import formats");
-        String importFormatsList = String.format("%s:%n%s%n", importFormatsIntro, alignStringTable(importFormats));
+        String importFormatsList = "%s:%n%s%n".formatted(importFormatsIntro, alignStringTable(importFormats));
 
         ExporterFactory exporterFactory = ExporterFactory.create(
                 preferencesService,
@@ -335,7 +332,7 @@ public class JabRefCLI {
                 .map(format -> new Pair<>(format.getName(), format.getId()))
                 .toList();
         String outFormatsIntro = Localization.lang("Available export formats");
-        String outFormatsList = String.format("%s:%n%s%n", outFormatsIntro, alignStringTable(exportFormats));
+        String outFormatsList = "%s:%n%s%n".formatted(outFormatsIntro, alignStringTable(exportFormats));
 
         String footer = '\n' + importFormatsList + outFormatsList + "\nPlease report issues at https://github.com/JabRef/jabref/issues.";
 
@@ -371,26 +368,5 @@ public class JabRefCLI {
         }
 
         return sb.toString();
-    }
-
-    /**
-     * Creates and wraps a multi-line and colon-seperated string from a List of Strings.
-     */
-    protected static String wrapStringList(List<String> list, int firstLineIndentation) {
-        StringBuilder builder = new StringBuilder();
-        int lastBreak = -firstLineIndentation;
-
-        for (String line : list) {
-            if (((builder.length() + 2 + line.length()) - lastBreak) > WIDTH) {
-                builder.append(",\n");
-                lastBreak = builder.length();
-                builder.append(WRAPPED_LINE_PREFIX);
-            } else if (builder.length() > 0) {
-                builder.append(", ");
-            }
-            builder.append(line);
-        }
-
-        return builder.toString();
     }
 }
